List all Vets on Vet index page. Closes #15

--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -17,9 +17,9 @@
     </thead>
     <tbody>
     <tr th:each="owner1 : ${owner}">
-        <td th:text="${owner1?.id}">1</td>
-        <td th:text="${owner1?.firstName}">Joe</td>
-        <td th:text="${owner1?.lastName}">Buck</td>
+        <td th:text="${owner1.id}">1</td>
+        <td th:text="${owner1.firstName}">Joe</td>
+        <td th:text="${owner1.lastName}">Buck</td>
     </tr>
     </tbody>
 </table>
