--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en"  xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
-    <title>List of Vets</title>
+    <title>List of Owners</title>
 </head>
 <body>
-<h1 th:text="'List of Vets'">List of Vets...</h1>
+<h1 th:text="'List of vets'">List of Vets...</h1>
 
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">Hamdo</td>
+        <td th:text="${vet.lastName}">Hamid</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
